Make sure the modifications cover page widget works for all HRSA covers

--- a/bloom_nofos/bloom_nofos/static/theme-opdiv-hrsa-white.css
+++ b/bloom_nofos/bloom_nofos/static/theme-opdiv-hrsa-white.css
@@ -23,6 +23,10 @@ h4 {
   background-color: var(--color--pale-blue);
 }
 
+.nofo--cover-page .nofo--cover-page--callout-box {
+  background-color: var(--color--white);
+}
+
 /* Cover page: hero image */
 
 .nofo--cover-page--hero
@@ -36,6 +40,10 @@ h4 {
 
 .nofo--cover-page--text .nofo--cover-page--header {
   background-color: var(--color--white);
+}
+
+.nofo--cover-page--text .nofo--cover-page--callout-box {
+  background-color: var(--color--pale-blue);
 }
 
 .nofo--cover-page--text .nofo--cover-page--header--logo--subheading,
